--- a/Backup/TeamProject3.csproj
+++ b/Backup/TeamProject3.csproj
@@ -1,4 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,13 +10,12 @@
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <StartupObject>TeamProject3.Program</StartupObject>
     <ApplicationIcon />
-    <FileUpgradeFlags>40</FileUpgradeFlags>
-    <UpgradeBackupLocation>E:\TeamProject3\Backup\</UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
+
   <ItemGroup>
     <MonoGameContentReference Include="**\*.mgcb" />
   </ItemGroup>
+
   <ItemGroup>
     <None Remove="Content\nez\effects\Bevels.mgfxo" />
     <None Remove="Content\nez\effects\BloomCombine.mgfxo" />
@@ -90,6 +90,7 @@
     <None Remove="Content\particle\wu1.pex" />
     <None Remove="Content\particle_types.txt" />
   </ItemGroup>
+
   <ItemGroup>
     <Content Include="Content\nez\effects\Bevels.mgfxo">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -308,12 +309,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.4" />
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="D:\source\repos\Nez\Nez.Persistence\Nez.Persistence.csproj" />
     <ProjectReference Include="D:\source\repos\Nez\Nez.Portable\Nez.csproj" />
   </ItemGroup>
+
 </Project>
