--- a/TeamProject3.csproj
+++ b/TeamProject3.csproj
@@ -64,6 +64,7 @@
     <None Remove="Content\particle\Atomic Bubble.pex" />
     <None Remove="Content\particle\Blue Flame.pex" />
     <None Remove="Content\particle\Blue Galaxy.pex" />
+    <None Remove="Content\particle\claw.pex" />
     <None Remove="Content\particle\Comet.pex" />
     <None Remove="Content\particle\Crazy Blue.pex" />
     <None Remove="Content\particle\cremation.pex" />
@@ -80,6 +81,7 @@
     <None Remove="Content\particle\JasonChoi_Swirl01.pex" />
     <None Remove="Content\particle\Leaves.pex" />
     <None Remove="Content\particle\Meks Blood Spill.pex" />
+    <None Remove="Content\particle\normalAttack.pex" />
     <None Remove="Content\particle\normalEffect.pex" />
     <None Remove="Content\particle\Plasma Glow.pex" />
     <None Remove="Content\particle\punishment.pex" />
@@ -240,6 +242,9 @@
     <Content Include="Content\particle\Blue Galaxy.pex">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\particle\claw.pex">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\particle\Comet.pex">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -286,6 +291,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\particle\Meks Blood Spill.pex">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\particle\normalAttack.pex">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\particle\normalEffect.pex">
