--- a/TeamProject3.csproj
+++ b/TeamProject3.csproj
@@ -61,6 +61,7 @@
     <None Remove="Content\nez\textures\textureWipeTransition\sawTooth.xnb" />
     <None Remove="Content\nez\textures\textureWipeTransition\spiral.xnb" />
     <None Remove="Content\nez\textures\textureWipeTransition\wink.xnb" />
+    <None Remove="Content\particle\admonishment.pex" />
     <None Remove="Content\particle\Atomic Bubble.pex" />
     <None Remove="Content\particle\Blue Flame.pex" />
     <None Remove="Content\particle\Blue Galaxy.pex" />
@@ -102,6 +103,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Content\particle\admonishment.pex">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\particle\judgement.pex">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
